fixed the flex items from jumping around,

--- a/gameWebsite/ohShoot/ohShoot.css
+++ b/gameWebsite/ohShoot/ohShoot.css
@@ -103,10 +103,6 @@
 
 
 
-.ohShootTitle {
-    margin-top: 80px; /* change to 80px when finalizing */
-        text-align: center;
-}
 
 
  .main {
